--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.2",
+    "@react-google-maps/api": "^2.20.6",
     "@shadcn/ui": "^0.0.4",
     "@supabase/supabase-js": "^2.49.4",
+    "@types/leaflet": "^1.9.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0"
   },
